@@ -1,4 +1,4 @@
-5f920ffa2600127406c450f57922dcef *DESCRIPTION
+74a7b00e13f4d7a6e6443b7a5851340c *DESCRIPTION
 9ac75b653a832b85e79e48b6c7e96aa0 *NAMESPACE
 5002b3347b247e4af9292f33085584aa *R/MCMCfit.R
 6fa5119823523adf7283adaa88d8c363 *R/ModelMats.R
@@ -7,7 +7,7 @@
 84e19a9756a29e0a8cf6fdf9a399cfd5 *R/adjustKRW.R
 63643be488a1cd6a20d812ce548d1bf0 *R/adjustScaleRW.R
 99feeb9770860d2b531700175d197114 *R/anova.JMbayes.R
-bbf052e5844ebe66d1ef324030458a47 *R/aucJM.JMbayes.R
+898de6a681b97458baeb5ae03d56efd5 *R/aucJM.JMbayes.R
 e119c8ce46cd7beb710c4d6248451217 *R/aucJM.R
 a7f6193f66dbe20c53cdbfb33da3e18f *R/aucJM.coxph.R
 874f62973f980ddbf415a1ea5d507143 *R/bdiag.R
@@ -15,7 +15,7 @@ ea180136f7b2912861cab81b5430e908 *R/blockUpdate.R
 9d984103fb45aa7545eb56a4ed041b95 *R/bma.combine.R
 d228a24a53b099604af6615a8a73bb30 *R/cd.R
 a40e956112c051b80b628dec65be2616 *R/cd.vec.R
-f361139a090ba1445a276fb20661ed9b *R/check_td.R
+6335db23f53aa6c53401916f60821b15 *R/check_td.R
 2e4520f8a51aa2a52049b4962b185ed3 *R/chol.transf.R
 38eea0b75cbe1497cd63c4a2ea2db216 *R/coef.JMbayes.R
 b9e3804436e22aaafad3ab3647eea3c4 *R/coef.summary.JMbayes.R
@@ -29,10 +29,10 @@ f6d405ceb458b3a879ae803ed03fb37d *R/crLong.R
 1608f7aa611c29744e085a67d2a0c7ab *R/dgt.R
 8cad36bb5cf6dae1402b706f8f4af403 *R/dmvnorm.R
 9e644f5f870baf8fdc31ca47c79d11c8 *R/dmvt.R
-ec70ce5797bd1b260141886cad6bf329 *R/dns.R
+cdccd09c372b08f912a40b3370dff270 *R/dns.R
 a82aa4c0ad372ab69f7bd56ce0a0430f *R/draw.stick.R
 d4ba202311aafa2dd131e4f04e639fb9 *R/dropAttr.R
-93bb02d2d45d8ec26189f67124a5d3d6 *R/dwish.R
+ff6e0f59cc3db33109c7455fdcd03c80 *R/dwish.R
 677b3e5814e71695f5fff03ae7002e71 *R/dynCJM.JMbayes.R
 98df0886b9a81ca886e06cad7f3e6025 *R/dynCJM.R
 dde50198b28372773f1f28440d196308 *R/dynCJM.coxph.R
@@ -40,11 +40,11 @@ dde50198b28372773f1f28440d196308 *R/dynCJM.coxph.R
 bfbebc19b6527096b1f1a04c61047e73 *R/effectiveSize.R
 58a85fe423154662a22c6f8a727f2fcd *R/extractInits.R
 0fe2013965eff194bd5b729f3eb6a2aa *R/extractPriors.R
-4f47ff5b7c15cb4fb27e08935b628f41 *R/fastSumID.R
-b7758a2862341da9a5e01dc297d3a8a6 *R/fastSumID2.R
+20827b372b406cc5a5087da68023a409 *R/fastSumID.R
+9eaf81b92b219ebfb39a0c06da95aa7d *R/fastSumID2.R
 3edef8a796c82193e8e67718d59fd63e *R/fd.R
 63bad5bce30a4aac3a14f04de865dc2c *R/fd.vec.R
-6df25cc459f2b38616904f56b48597a0 *R/find_positions.R
+4718d5b83cc3f0fa518fcf85bebbfeb6 *R/find_positions.R
 66c5052385a1ef86ba02b12d8d72f1ed *R/fitted.JMbayes.R
 7371154b28264adbcd1d599c0de8e97f *R/fixNames.R
 350c2878fe19b0165432eced7d4eb0ca *R/fixef.JMbayes.R
@@ -63,7 +63,7 @@ af2e7908bd00b4a2a4a5fe19b13f07ad *R/jointModelBayes.R
 5411ddf0ce93132c35a07437a8b603db *R/logLik.JMbayes.R
 99f503d022028f5298b2326d1aad6f83 *R/logh.b.R
 0e9dba68386b7b23e35828fedb66a542 *R/makepredictcall.dbs.R
-2a71fd5823ed4c0dfa57b8b8e4538654 *R/makepredictcall.dns.R
+c1eb3f0bbb898e5a0b115b920981fca6 *R/makepredictcall.dns.R
 c2ff4b5f46ee601dfe59a06ef4c53a65 *R/makepredictcall.ibs.R
 be10618a0627ee5062d4819d29824e60 *R/makepredictcall.ins.R
 90ecb28e32feda2837bbf73811e40799 *R/marglogLik.R
@@ -73,7 +73,7 @@ e125acce83667f37cff5ab6f3a496251 *R/pgt.R
 d83e0fc85fd19d0a2c534b3b2581526c *R/plot.JMbayes.R
 2c0f396d53fc9ad3c2f1b3e744cb0ebb *R/plot.rocJM.R
 db57df4ec605599548e477864fab9869 *R/plot.survfit.JMbayes.R
-ea7efe02b9753559c068c485c889daee *R/prederrJM.JMbayes.R
+8210a4205f1758d244cac41f25f71fdf *R/prederrJM.JMbayes.R
 7dfb47273da4f597e351dded97f83db4 *R/prederrJM.R
 556155fc520c7ba0e8ccfdc494c1191a *R/prederrJM.coxph.R
 09a8fe10e070ea96dd2ebdda770d6e39 *R/predict.JMbayes.R
@@ -91,7 +91,7 @@ a19f754b0f68d1aefd8662ae4d49986b *R/residuals.JMbayes.R
 8f79df33a857384c9d1e41bc63605685 *R/rgt.R
 55581f1e8d484d53e7002510ff5d857e *R/rmvnorm.R
 d2a98b8f4d36efb002b650bb4ca63467 *R/rmvt.R
-75157ad3e554c48541d134d1ea60c2b3 *R/rocJM.JMbayes.R
+c053da6ab4196805a7bd96a9c789bfe4 *R/rocJM.JMbayes.R
 3f23f3e20469454e189f593a6eab50e0 *R/rocJM.R
 845fc402ca3149b13aaca7c10f2bf3d4 *R/rowMedians.R
 499fa21ffe71b16742e70992959c8a37 *R/runDynPred.R
@@ -101,13 +101,14 @@ d9d7247468d9ef1cbd5c8c02b2c4f663 *R/smilyface.R
 b62397b00cc092c45b5de84f6d5c89c3 *R/stdErr.R
 c749b4dbb19aafc9892ce1b158117931 *R/summary.JMbayes.R
 23699ea8d653215173083ad06368726c *R/survPriors.R
-f22eda7c6ae5153cdbbf5db3dae9092b *R/survfitJM.JMbayes.R
+64faffad7e9d18039b92f19d0c2ec1e2 *R/survfitJM.JMbayes.R
 8175c76baa2bda8517e8902e14fbad3d *R/survfitJM.R
 41f77ee7bd11673ab90745845280cb5f *R/survivalFun.R
 b47c9283f18854e12f1d0ccd32859519 *R/trimAboveMean.R
 1a644b17c74303bf4154bb956efa54bc *R/update.JMbayes.R
 7e432b2f981236bcefc6602a3658b94e *R/vcov.JMbayes.R
 f8136e99c41120e0a4c3c40f84f98b9b *R/xtable.JMbayes.R
+3bf221c6ade2c23473d9a07d39cbf0fd *README.md
 b45a08564c6d113a6b133f8f8340a5c4 *data/aids.id.rda
 0c91cfcab65d67a057f0901de1b8a9f9 *data/aids.rda
 3f16a58c30687354dd89c10258e604c4 *data/pbc2.id.rda
@@ -118,9 +119,9 @@ d5983a9ed02887996c1085a8615ba031 *data/prothros.rda
 c9c7abe9bea00e452b3db54aa3196456 *demo/global.R
 4009be06d68482ebae6807ae394980b3 *demo/server.R
 2fc770fb5163a8b3338410fe71a234d7 *demo/ui.R
-b2d285ff32424007407aa02c1aaa29e5 *inst/NEWS
+9115cc4f1cf8aa5ed6f7be580d8d54ec *inst/NEWS
 4c1ce5cf77add6c381281a7139a2a461 *man/DerivIntSplines.Rd
-1628e3ba9f06256c0a4cde6611b01a6b *man/JMbayes.Rd
+b2cc475b3f0031efac265c1b80a6f79b *man/JMbayes.Rd
 64f4ed60f785838d6b397df155b2f844 *man/JMbayesObject.Rd
 a8d601aee1a4beb0c3fd47e4a9e68ee0 *man/aids.Rd
 ce85b46d97fe4cbd74519a401ad8c6b7 *man/anova.Rd
@@ -135,7 +136,7 @@ b7a4467bfde59e08a7d3d12da9fc28a8 *man/fitted.Rd
 e68de2e7d2d57870e38dcd2c2da37bc9 *man/jointModelBayes.Rd
 2a240248af80d21d8c7c1407c8fcd6d4 *man/logLik.Rd
 4daee5f93d4166a1649803a148bb0c06 *man/marglogLik.Rd
-e7e3bffa1f4c89ad37091cb7c4af9f57 *man/pbc.Rd
+e8974afafd109e02a44430fdbee24f92 *man/pbc.Rd
 6ced630a0068b41fe88473ee217d32f6 *man/plot-survfitJM.Rd
 b749900c327647e77bd57e3c29e1d2e8 *man/plot.Rd
 c0b33418647d0d38859e757cfb560fc3 *man/prederrJM.Rd
